Test/errors/err_extern_collides_with_core.cb
// A user `extern` whose bare name collides with a namespaced core-library extern
// (os.windows.WriteFile, materialized in every program) must be rejected with a clear
// diagnostic. The core symbol lives under its namespace in the function table, so a
// bare user extern does not match it there; without this check getOrInsertFunction would
// hand back the existing function while the call coerces args to the user's differing
// types, tripping an LLVM "bad signature" assert at codegen.
expect_error("conflicting declaration of extern 'WriteFile'") {
    extern u32 WriteFile(void* h, void* buf, u64 n, void* written, void* ov);
}

extern int main()
{
    return 0;
}
